--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.8",
     "lucide-react": "^0.462.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
